added hello for daiji test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,5 +26,11 @@
       }
     },
   ],
-  "java.test.defaultConfig": "WPIlibUnitTests"
+  "java.test.defaultConfig": "WPIlibUnitTests",
+
+  "java.checkstyle.configuration": "${workspaceFolder}/checks.xml",
+  "java.checkstyle.version": "9.1",
+  "java.checkstyle.properties": {
+      "basedir": "${workspaceFolder}/src/main/java/frc/robot"
+  }
 }
