fixed some checkstyle errors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,5 @@
     },
   ],
   "java.test.defaultConfig": "WPIlibUnitTests",
-  "java.checkstyle.configuration": "${workspaceFolder}\\checks.xml"
+  "java.checkstyle.configuration": "${workspaceFolder}/checks.xml"
 }
