--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,7 +28,7 @@
   ],
   "java.test.defaultConfig": "WPIlibUnitTests",
 
-  "java.checkstyle.configuration": "${workspaceFolder}/checks.xml",
+  "java.checkstyle.configuration": "${workspaceFolder}\\checks.xml",
   "java.checkstyle.version": "9.1",
   "java.checkstyle.properties": {
       "basedir": "${workspaceFolder}/src/main/java/frc/robot"
